<resources>
    <string name="app_name">FollowApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="facebook_app_id">1884372321796647</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">762516796d5173cd695d9ff75620791e</string>
    <string name="ak_login_protocol_scheme">ak1884372321796647</string>
    <string name="fb_login_protocol_scheme">fb1884372321796647</string>
    <string name="FACEBOOK_CONTENT_PROVIDER_APP_ID">com.facebook.app.FacebookContentProvider1884372321796647</string>
    <string name="accountkit_button_label">Register</string>
    <string name="phone_label">Phone Number</string>


    <string name="email_label">Email</string>
    <string name="name_label">Name</string> <string name="id_label">Account ID</string>
    <string name="login_label">Email or Phone Number</string>
    <string name="logout_label">Log Out</string>

    <string name="hint_search">Buscar Oficio</string>

    //formulario
    <string name="feedbackbutton">Enviar Datos</string>
    <string name="feedbackresponse">Log Out</string>
    <string name="feedbackbody">Descripcion</string>
    <string name="feedbacktype">Oficio</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbackname">Nombre</string>
    <string name="feedbacktitle">Registro</string>

    <string name="feedbacktype1">Escoja un Oficio</string>
    <string name="feedbacktype2">Profesor de Quimica</string>
    <string name="feedbacktype3">Profesor de Guitarra</string>
    <string name="feedbacktype4">Instructor de Natacion</string>

    <string name="app_name_google">G+ Login</string>
    <string name="action_settings_google">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Desconnect Out</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
</resources>
