<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            tools:context="com.landersaavedra.FollowApp.RegisterActivity">
    <ImageView
        android:id="@+id/backgroundFormulario"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/repeat_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feedbacktitle"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:drawableTop="@drawable/logo"
        android:drawablePadding="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/EditTextName">
    </TextView>

    <EditText
            android:id="@+id/EditTextName"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:hint="@string/feedbackname"
            android:textColorHint="#c1cdd8"
            android:textColor="#666666"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/EditTextEmail">
    </EditText>

    <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:hint="@string/feedbackemail"
            android:textColorHint="#c1cdd8"
            android:textColor="#666666"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/EditTextFeedbackBody">
    </EditText>
    <!--android:prompt="@string/feedbacktype"-->
    <!--android:entries="@array/feedbacktypelist"-->


    <EditText
            android:id="@+id/EditTextFeedbackBody"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:hint="@string/feedbackbody"
            android:inputType="textMultiLine"
            android:lines="5"
            android:textColorHint="#c1cdd8"
            android:textColor="#666666"
            android:background="@android:color/white"
            android:textSize="16sp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ButtonSendFeedback">
    </EditText>
    <Button
            android:id="@+id/ButtonSendFeedback"
            android:layout_height="50dp"
            android:text="@string/feedbackbutton"
            android:layout_width="0dp"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/login_button_selector"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
    </Button>

</android.support.constraint.ConstraintLayout>