<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context="com.landersaavedra.FollowApp.LoginActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/repeat_bg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:drawableTop="@drawable/logo"
        android:drawablePadding="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_status" />

    <TextView
        android:id="@+id/login_status"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textColorHint="#c1cdd8"
        android:textColor="#666666"
        android:background="@android:color/white"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_text" />

    <EditText
        android:id="@+id/login_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/login_label"
        android:textColorHint="#c1cdd8"
        android:textColor="#666666"
        android:background="@android:color/white"
        android:textSize="16sp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/accountkit_button" />

    <Button
        android:id="@+id/accountkit_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/accountkit_button_label"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:textColor="@android:color/white"
        android:background="@drawable/login_button_selector"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/facebook_login_button" />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="0dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in" />

    <com.google.android.gms.common.SignInButton
      android:id="@+id/btn_sign_in"
      android:layout_width="0dp"
      android:layout_height="70dp"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:textAlignment="center"
      android:layout_marginBottom="6dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>